--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	<title>Git Cheat Sheet by zendvn.com</title>
+	<title>Git Cheat Sheet by huynhduychu@gmail.com</title>
 
 	<!-- Bootstrap -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
@@ -21,7 +21,7 @@
 	
 	<div class="container">
 		
-    	<h1 class="text-center">Git Cheat Sheet by zendvn.com</h1>
+    	<h1 class="text-center">Git Cheat Sheet by huynhduychu</h1>
     	<div class="row">
 			<!-- LOCAL REPO : START -->
 			<div class="panel panel-primary">
@@ -137,6 +137,20 @@
 							<td>Nhập 1 commit về commit trước đó</td>
 							<td>...</td>
 						</tr>
+						<tr>
+							<td>14</td>
+							<td><strong>git remote add origin https://github.com/huynhduychu/chuynh23Test.git</strong> </td>
+							<td>tao ra 1 nhan remote origin va nhap no len tren repo</td>
+							<td>...</td>
+						</tr>
+						<tr>
+							<td>15</td>
+							<td><strong>git push -u origin master</strong> </td>
+							<td>push remote origin len nhanh master tren repo(di sau cau lenh phia tren)</td>
+							<td>...</td>
+						</tr>
+						
+
 					</tbody>
 				</table>
 			</div>
