commit to tag Ver 2

--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
 						
 						<!-- CẤU HÌNH P4MERGE : START -->
 						<tr>
-							<td colspan="4" class="subtopic">CẤU HÌNH P4MERGE (C:\Users\HaiLan\.gitconfig)</td>
+							<td colspan="4" class="subtopic">CẤU HÌNH P4MERGE (C:\Users\chuynh\.gitconfig)</td>
 						</tr>
 
 						<tr>
@@ -671,7 +671,7 @@
 	</div>
 
 	<footer>
-		Git Cheat Sheet by zendvn.com
+		Git Cheat Sheet by chu huynh
 	</footer>
 
 	<script src="js/jquery.min.js"></script>
